<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/et_username"
        android:hint="@string/hint_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/hint_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_login"
            android:text="@string/button_login"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <Button
            android:id="@+id/btn_create_account"
            android:text="@string/button_create_account"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="buttonClicked"/>
        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"/>
    </LinearLayout>

    <include
        layout="@layout/progress"
        ></include>

</LinearLayout>
