<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_project_name"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_project_name"
        android:layout_gravity="left" />

    <EditText
        android:id="@+id/et_project_color"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_project_color"

        android:layout_gravity="left"
        />

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:onClick="cancelButtonPressed"
            android:text="@string/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_okay"
            android:onClick="okayButtonPressed"
            android:text="@string/button_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>