<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Create a New Account"/>

    <EditText
        android:id="@+id/et_username"
        android:hint="@string/hint_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/hint_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_create_account"
        android:text="@string/button_create_account"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

</LinearLayout>